ProjectPart2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    gt
    obracket
    invert
    cparen
    incassign
    lt
    usub
    oparen
    uadd
    ocurly
    dedent
    string
    lparen
    rparen
    decassign
    ccurly
    indent
    cbracket

Grammar

Rule 0     S' -> module
Rule 1     module -> stmt
Rule 2     stmt -> statement_list
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement_list newline statement
Rule 5     statement -> print expression
Rule 6     statement -> assname equals expression
Rule 7     statement -> expression
Rule 8     expression -> expression plus expression
Rule 9     expression -> expression minus expression
Rule 10    expression -> expression times expression
Rule 11    expression -> expression div expression
Rule 12    expression -> expression power expression
Rule 13    expression -> expression modulo expression
Rule 14    expression -> expression lshift expression
Rule 15    expression -> expression rshift expression
Rule 16    expression -> expression floordiv expression
Rule 17    expression -> expression and expression
Rule 18    expression -> expression or expression
Rule 19    expression -> expression xor expression
Rule 20    expression -> integer
Rule 21    expression -> name
Rule 22    assname -> identifier
Rule 23    name -> identifier

Terminals, with rules where they appear

and                  : 17
cbracket             : 
ccurly               : 
cparen               : 
decassign            : 
dedent               : 
div                  : 11
equals               : 6
error                : 
floordiv             : 16
gt                   : 
identifier           : 22 23
incassign            : 
indent               : 
integer              : 20
invert               : 
lparen               : 
lshift               : 14
lt                   : 
minus                : 9
modulo               : 13
newline              : 4
obracket             : 
ocurly               : 
oparen               : 
or                   : 18
plus                 : 8
power                : 12
print                : 5
rparen               : 
rshift               : 15
string               : 
times                : 10
uadd                 : 
usub                 : 
xor                  : 19

Nonterminals, with rules where they appear

assname              : 6
expression           : 5 6 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19
module               : 0
name                 : 21
statement            : 3 4
statement_list       : 2 4
stmt                 : 1

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . stmt
    (2) stmt -> . statement_list
    (3) statement_list -> . statement
    (4) statement_list -> . statement_list newline statement
    (5) statement -> . print expression
    (6) statement -> . assname equals expression
    (7) statement -> . expression
    (22) assname -> . identifier
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    print           shift and go to state 3
    identifier      shift and go to state 9
    integer         shift and go to state 6

    name                           shift and go to state 7
    stmt                           shift and go to state 4
    assname                        shift and go to state 5
    module                         shift and go to state 1
    statement                      shift and go to state 2
    statement_list                 shift and go to state 8
    expression                     shift and go to state 10

state 1

    (0) S' -> module .



state 2

    (3) statement_list -> statement .

    newline         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 3

    (5) statement -> print . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 12
    name                           shift and go to state 7

state 4

    (1) module -> stmt .

    $end            reduce using rule 1 (module -> stmt .)


state 5

    (6) statement -> assname . equals expression

    equals          shift and go to state 13


state 6

    (20) expression -> integer .

    plus            reduce using rule 20 (expression -> integer .)
    minus           reduce using rule 20 (expression -> integer .)
    times           reduce using rule 20 (expression -> integer .)
    div             reduce using rule 20 (expression -> integer .)
    power           reduce using rule 20 (expression -> integer .)
    modulo          reduce using rule 20 (expression -> integer .)
    lshift          reduce using rule 20 (expression -> integer .)
    rshift          reduce using rule 20 (expression -> integer .)
    floordiv        reduce using rule 20 (expression -> integer .)
    and             reduce using rule 20 (expression -> integer .)
    or              reduce using rule 20 (expression -> integer .)
    xor             reduce using rule 20 (expression -> integer .)
    newline         reduce using rule 20 (expression -> integer .)
    $end            reduce using rule 20 (expression -> integer .)


state 7

    (21) expression -> name .

    plus            reduce using rule 21 (expression -> name .)
    minus           reduce using rule 21 (expression -> name .)
    times           reduce using rule 21 (expression -> name .)
    div             reduce using rule 21 (expression -> name .)
    power           reduce using rule 21 (expression -> name .)
    modulo          reduce using rule 21 (expression -> name .)
    lshift          reduce using rule 21 (expression -> name .)
    rshift          reduce using rule 21 (expression -> name .)
    floordiv        reduce using rule 21 (expression -> name .)
    and             reduce using rule 21 (expression -> name .)
    or              reduce using rule 21 (expression -> name .)
    xor             reduce using rule 21 (expression -> name .)
    newline         reduce using rule 21 (expression -> name .)
    $end            reduce using rule 21 (expression -> name .)


state 8

    (2) stmt -> statement_list .
    (4) statement_list -> statement_list . newline statement

    $end            reduce using rule 2 (stmt -> statement_list .)
    newline         shift and go to state 14


state 9

    (22) assname -> identifier .
    (23) name -> identifier .

    equals          reduce using rule 22 (assname -> identifier .)
    plus            reduce using rule 23 (name -> identifier .)
    minus           reduce using rule 23 (name -> identifier .)
    times           reduce using rule 23 (name -> identifier .)
    div             reduce using rule 23 (name -> identifier .)
    power           reduce using rule 23 (name -> identifier .)
    modulo          reduce using rule 23 (name -> identifier .)
    lshift          reduce using rule 23 (name -> identifier .)
    rshift          reduce using rule 23 (name -> identifier .)
    floordiv        reduce using rule 23 (name -> identifier .)
    and             reduce using rule 23 (name -> identifier .)
    or              reduce using rule 23 (name -> identifier .)
    xor             reduce using rule 23 (name -> identifier .)
    newline         reduce using rule 23 (name -> identifier .)
    $end            reduce using rule 23 (name -> identifier .)


state 10

    (7) statement -> expression .
    (8) expression -> expression . plus expression
    (9) expression -> expression . minus expression
    (10) expression -> expression . times expression
    (11) expression -> expression . div expression
    (12) expression -> expression . power expression
    (13) expression -> expression . modulo expression
    (14) expression -> expression . lshift expression
    (15) expression -> expression . rshift expression
    (16) expression -> expression . floordiv expression
    (17) expression -> expression . and expression
    (18) expression -> expression . or expression
    (19) expression -> expression . xor expression

    newline         reduce using rule 7 (statement -> expression .)
    $end            reduce using rule 7 (statement -> expression .)
    plus            shift and go to state 22
    minus           shift and go to state 26
    times           shift and go to state 20
    div             shift and go to state 25
    power           shift and go to state 18
    modulo          shift and go to state 17
    lshift          shift and go to state 23
    rshift          shift and go to state 24
    floordiv        shift and go to state 21
    and             shift and go to state 15
    or              shift and go to state 16
    xor             shift and go to state 19


state 11

    (23) name -> identifier .

    plus            reduce using rule 23 (name -> identifier .)
    minus           reduce using rule 23 (name -> identifier .)
    times           reduce using rule 23 (name -> identifier .)
    div             reduce using rule 23 (name -> identifier .)
    power           reduce using rule 23 (name -> identifier .)
    modulo          reduce using rule 23 (name -> identifier .)
    lshift          reduce using rule 23 (name -> identifier .)
    rshift          reduce using rule 23 (name -> identifier .)
    floordiv        reduce using rule 23 (name -> identifier .)
    and             reduce using rule 23 (name -> identifier .)
    or              reduce using rule 23 (name -> identifier .)
    xor             reduce using rule 23 (name -> identifier .)
    newline         reduce using rule 23 (name -> identifier .)
    $end            reduce using rule 23 (name -> identifier .)


state 12

    (5) statement -> print expression .
    (8) expression -> expression . plus expression
    (9) expression -> expression . minus expression
    (10) expression -> expression . times expression
    (11) expression -> expression . div expression
    (12) expression -> expression . power expression
    (13) expression -> expression . modulo expression
    (14) expression -> expression . lshift expression
    (15) expression -> expression . rshift expression
    (16) expression -> expression . floordiv expression
    (17) expression -> expression . and expression
    (18) expression -> expression . or expression
    (19) expression -> expression . xor expression

    newline         reduce using rule 5 (statement -> print expression .)
    $end            reduce using rule 5 (statement -> print expression .)
    plus            shift and go to state 22
    minus           shift and go to state 26
    times           shift and go to state 20
    div             shift and go to state 25
    power           shift and go to state 18
    modulo          shift and go to state 17
    lshift          shift and go to state 23
    rshift          shift and go to state 24
    floordiv        shift and go to state 21
    and             shift and go to state 15
    or              shift and go to state 16
    xor             shift and go to state 19


state 13

    (6) statement -> assname equals . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 27
    name                           shift and go to state 7

state 14

    (4) statement_list -> statement_list newline . statement
    (5) statement -> . print expression
    (6) statement -> . assname equals expression
    (7) statement -> . expression
    (22) assname -> . identifier
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    print           shift and go to state 3
    identifier      shift and go to state 9
    integer         shift and go to state 6

    assname                        shift and go to state 5
    expression                     shift and go to state 10
    name                           shift and go to state 7
    statement                      shift and go to state 28

state 15

    (17) expression -> expression and . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 29
    name                           shift and go to state 7

state 16

    (18) expression -> expression or . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 30
    name                           shift and go to state 7

state 17

    (13) expression -> expression modulo . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 31
    name                           shift and go to state 7

state 18

    (12) expression -> expression power . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 32
    name                           shift and go to state 7

state 19

    (19) expression -> expression xor . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 33
    name                           shift and go to state 7

state 20

    (10) expression -> expression times . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 34
    name                           shift and go to state 7

state 21

    (16) expression -> expression floordiv . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 35
    name                           shift and go to state 7

state 22

    (8) expression -> expression plus . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 36
    name                           shift and go to state 7

state 23

    (14) expression -> expression lshift . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 37
    name                           shift and go to state 7

state 24

    (15) expression -> expression rshift . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 38
    name                           shift and go to state 7

state 25

    (11) expression -> expression div . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 39
    name                           shift and go to state 7

state 26

    (9) expression -> expression minus . expression
    (8) expression -> . expression plus expression
    (9) expression -> . expression minus expression
    (10) expression -> . expression times expression
    (11) expression -> . expression div expression
    (12) expression -> . expression power expression
    (13) expression -> . expression modulo expression
    (14) expression -> . expression lshift expression
    (15) expression -> . expression rshift expression
    (16) expression -> . expression floordiv expression
    (17) expression -> . expression and expression
    (18) expression -> . expression or expression
    (19) expression -> . expression xor expression
    (20) expression -> . integer
    (21) expression -> . name
    (23) name -> . identifier

    integer         shift and go to state 6
    identifier      shift and go to state 11

    expression                     shift and go to state 40
    name                           shift and go to state 7

state 27

    (6) statement -> assname equals expression .
    (8) expression -> expression . plus expression
    (9) expression -> expression . minus expression
    (10) expression -> expression . times expression
    (11) expression -> expression . div expression
    (12) expression -> expression . power expression
    (13) expression -> expression . modulo expression
    (14) expression -> expression . lshift expression
    (15) expression -> expression . rshift expression
    (16) expression -> expression . floordiv expression
    (17) expression -> expression . and expression
    (18) expression -> expression . or expression
    (19) expression -> expression . xor expression

    newline         reduce using rule 6 (statement -> assname equals expression .)
    $end            reduce using rule 6 (statement -> assname equals expression .)
    plus            shift and go to state 22
    minus           shift and go to state 26
    times           shift and go to state 20
    div             shift and go to state 25
    power           shift and go to state 18
    modulo          shift and go to state 17
    lshift          shift and go to state 23
    rshift          shift and go to state 24
    floordiv        shift and go to state 21
    and             shift and go to state 15
    or              shift and go to state 16
    xor             shift and go to state 19


state 28

    (4) statement_list -> statement_list newline statement .

    newline         reduce using rule 4 (statement_list -> statement_list newline statement .)
    $end            reduce using rule 4 (statement_list -> statement_list newline statement .)


state 29

    (17) expression -> expression and expression .
    (8) expression -> expression . plus expression
    (9) expression -> expression . minus expression
    (10) expression -> expression . times expression
    (11) expression -> expression . div expression
    (12) expression -> expression . power expression
    (13) expression -> expression . modulo expression
    (14) expression -> expression . lshift expression
    (15) expression -> expression . rshift expression
    (16) expression -> expression . floordiv expression
    (17) expression -> expression . and expression
    (18) expression -> expression . or expression
    (19) expression -> expression . xor expression
